2005-05-09 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Test units work again.
	* Current test result: 
	Result: 28 classes, 68 methods, 351511 tests, 0 failed
	* Re-ident source code.

2005-05-07 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix memory leak (in progress).

2005-05-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix warning for GCC 4.
	* Test is broken in GCC 4 due to memory leak.

2005-05-04 Quentin Mathe <qmathe@club-internet.fr>

	* Source/Analysis/LCSimpleAnalyser.m:
	* Source/Index/LCDocumentWriter.m:
	* Source/Index/LCSegmentReader.m:
	* Source/Index/TestSegmentMerger.m:
	* Source/Index/TestTermVectorsWriter.m:
	Fixed case mismatches which prevented compilation on case sensitive system 
	(patch provided by Rob Burns).

2005-04-29 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Header/Search/LCHit.h:
	* Source/Search/LCHit.m: 
	* Header/Search/LCHitIterator.h:
	* Source/Search/LCHitIterator.m: ported.

2005-04-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Header/Search/LCBooleanScorers.h: removed.
	* Header/Search/LCTermQuery.h:
	* Source/Search/LCTermQuery.m: 
	* Header/Search/LCTermScorer.h:
	* Source/Search/LCTermScorer.m: 
	* Header/Search/LCNonMatchingScorer.h:
	* Source/Search/LCNonMatchingScorer.m: 
	* Header/Search/LCBooleanScorer.h:
	* Source/Search/LCBooleanScorer.m: 
	* Header/Search/LCDisjunctionSumScorer.h:
	* Source/Search/LCDisjunctionSumScorer.m: ported.
	NOTE: LCBooleanScorer is ported from BooleanScorer2 in lucene
	since it is the scorer for lucene 1.9/2.0.
	Original BooleanScorer in lucene is for 1.4.

2005-04-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Catch up lucene svn version.
	* Header/Search/LCBooleanQuery.h:
	* Source/Search/LCBooleanQuery.m: ported.

2005-04-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Header/Search/LCConjunctionScorer.h:
	* Source/Search/LCConjunctionScorer.m:
	* Header/Search/LCReqOptSumScorer.h:
	* Source/Search/LCReqOptSumScorer.m:
	* Header/Search/LCReqExclScorer.h: