@@ -4,7 +4,15 @@
 #include <Foundation/Foundation.h>
 
 @interface LCHitCollector: NSObject
+{
+	id target;
+	SEL selector;
+}
 - (void) collect: (int) doc score: (float) score;
+- (void) setTarget: (id) target;
+- (void) setSelector: (SEL) selector;
+- (id) target;
+- (SEL) selector;
 @end
 
 #endif /* __LUCENE_SEARCH_HIT_COLLECTOR__ */
